--- a/day03/day03/day03.vcxproj.filters
+++ b/day03/day03/day03.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="test.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="node.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
