--- a/day05/day05/day05.vcxproj.filters
+++ b/day05/day05/day05.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="day05.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="inputf.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="printf.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
