--- a/day08/miniproject/miniproject.vcxproj
+++ b/day08/miniproject/miniproject.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="project01_input" />
+    <ClCompile Include="project01.c" />
+    <ClCompile Include="project01_inputid.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
