--- a/day08/miniproject02/miniproject02.vcxproj
+++ b/day08/miniproject02/miniproject02.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="miniproject02.c">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="project002.c">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</SDLCheck>
