--- a/day10/final/final.vcxproj.filters
+++ b/day10/final/final.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="final.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="final02.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
