--- a/day09/mini/mini.vcxproj
+++ b/day09/mini/mini.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="mini.c">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
